Changes in setter functions

--- a/Oop_test.ipynb
+++ b/Oop_test.ipynb
@@ -32,18 +32,21 @@
     "        return self.__title\n",
     "        \n",
     "    def set_title(self,title):\n",
+    "        self.__title  = title\n",
     "        return self.__title\n",
     "        \n",
     "    def get_author(self):\n",
     "        return self.__author\n",
     "        \n",
-    "    def set_author(self,author):\n",
+    "    def set_title(self,author):\n",
+    "        self.__author  = author\n",
     "        return self.__author\n",
-    "        \n",
+    "    \n",
     "    def get_isbn(self):\n",
     "        return self.__isbn\n",
     "        \n",
     "    def set_isbn(self,isbn):\n",
+    "        self.__isbn = isbn\n",
     "        return self.__isbn\n",
     "        \n",
     "    def display_info(self):\n",
@@ -84,7 +87,7 @@
     "    def borrow_book(self, book):\n",
     "        print(f\"person is borrowing : {book.get_title()}\")\n",
     "\n",
-    "    def  return_book(self):\n",
+    "    def return_book(self):\n",
     "        print(\"person is returning the book\")\n",
     "\n",
     "class Librarian(person):\n",
@@ -117,6 +120,8 @@
     "\n",
     "(get_person_role(user))\n",
     "(get_person_role(staff))\n",
+    "\n",
+    "\n",
     "\n",
     "(staff.check_availability(my_book))\n",
     "\n",
